@@ -48,13 +48,6 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_Compile_Shared_Inher
     public $optional_attributes = array('assign');
 
     /**
-     * nesting level of block tags
-     *
-     * @var int
-     */
-    public static $blockTagNestingLevel = 0;
-
-    /**
      * Saved compiler object
      *
      * @var Smarty_Internal_TemplateCompilerBase
@@ -85,8 +78,11 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_Compile_Shared_Inher
         // check and get attributes
         $_attr = $this->getAttributes($compiler, $args);
         $compiler->_cache[ 'blockNesting' ] ++;
+        $_className = 'Block_' . preg_replace('![^\w]+!', '_', uniqid(rand(), true));
         $compiler->_cache[ 'blockName' ][ $compiler->_cache[ 'blockNesting' ] ] = $_attr[ 'name' ];
+        $compiler->_cache[ 'blockClass' ][ $compiler->_cache[ 'blockNesting' ] ] = $_className;
         $compiler->_cache[ 'blockParams' ][ $compiler->_cache[ 'blockNesting' ] ] = array();
+        $compiler->_cache[ 'blockParams' ][ 1 ][ 'subBlocks' ][ trim($_attr[ 'name' ], '"\'') ][] = $_className;
         $this->openTag($compiler, 'block', array($_attr, $compiler->nocache, $compiler->parser->current_buffer,
                                                  $compiler->template->compiled->has_nocache_code,
                                                  $compiler->template->caching));
@@ -102,47 +98,6 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_Compile_Shared_Inher
         $compiler->parser->current_buffer = new Smarty_Internal_ParseTree_Template();
         $compiler->template->compiled->has_nocache_code = false;
         $compiler->suppressNocacheProcessing = true;
-    }
-
-    /**
-     * Compile saved child block source
-     *
-     * @param \Smarty_Internal_TemplateCompilerBase compiler object
-     * @param string                                $_name   optional name of child block
-     *
-     * @return string   compiled code of child block
-     */
-    static function compileChildBlock(Smarty_Internal_TemplateCompilerBase $compiler, $_name = null)
-    {
-        if (!isset($compiler->_cache[ 'blockNesting' ])) {
-            $compiler->trigger_template_error(' tag {$smarty.block.child} used outside {block} tags ',
-                                              $compiler->parser->lex->taglineno);
-        }
-        $compiler->has_code = true;
-        $compiler->suppressNocacheProcessing = true;
-        $compiler->_cache[ 'blockParams' ][ $compiler->_cache[ 'blockNesting' ] ][ 'callsChild' ] = 'true';
-        $output = "<?php \n\$_smarty_tpl->inheritance->callChild(\$_smarty_tpl, \$this);\n?>\n";
-        return $output;
-    }
-
-    /**
-     * Compile $smarty.block.parent
-     *
-     * @param \Smarty_Internal_TemplateCompilerBase $compiler compiler object
-     * @param string                                $_name    optional name of child block
-     *
-     * @return string   compiled code of child block
-     */
-    static function compileParentBlock(Smarty_Internal_TemplateCompilerBase $compiler, $_name = null)
-    {
-        if (!isset($compiler->_cache[ 'blockNesting' ])) {
-            $compiler->trigger_template_error(' tag {$smarty.block.parent} used outside {block} tags ',
-                                              $compiler->parser->lex->taglineno);
-        }
-        $compiler->suppressNocacheProcessing = true;
-        $compiler->has_code = true;
-        $output = "<?php \n\$_smarty_tpl->inheritance->callParent(\$_smarty_tpl, \$this);\n?>\n";
-        return $output;
     }
 }
 
@@ -175,7 +130,7 @@ class Smarty_Internal_Compile_Blockclose extends Smarty_Internal_Compile_Shared_
                 $_block[ $name ] = 'true';
             }
         }
-        $_className = 'Block_' . preg_replace('![^\w]+!', '_', uniqid(rand(), true));
+        $_className = $compiler->_cache[ 'blockClass' ][ $compiler->_cache[ 'blockNesting' ] ];
         // get compiled block code
         $_functionCode = $compiler->parser->current_buffer;
         // setup buffer for template function code
@@ -186,7 +141,7 @@ class Smarty_Internal_Compile_Blockclose extends Smarty_Internal_Compile_Shared_
         $output .= "class {$_className} extends Smarty_Internal_Block\n";
         $output .= "{\n";
         foreach ($_block as $property => $value) {
-            $output .= "public \${$property} = {$value};\n";
+            $output .= "public \${$property} = " . var_export($value,true) .";\n";
         }
         $output .= "public function callBlock(Smarty_Internal_Template \$_smarty_tpl) {\n";
         //$output .= "/*/%%SmartyNocache:{$compiler->template->compiled->nocache_hash}%%*/\n";
