@@ -3,6 +3,8 @@
   - bugfix some $smarty special template variables are no longer accessed as real variable.
     using them on calls like {if isset($smarty.foo)} or {if empty($smarty.foo)} will fail
     http://www.smarty.net/forums/viewtopic.php?t=26222
+  - temporary fix for https://github.com/smarty-php/smarty/issues/293 main reason still under investigation
+  - improvement new tags {block_parent} {block_child} in template inheritance
 
  19.09.2016
   - optimization clear compiled and cached folder completely on detected version change
